// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#buildOwnersRoles should collect data 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "AccessRole",
      ],
      "_key": "hubspot_role:97200 ",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "id": "97200",
            "name": "ExampleRole",
            "requiresBillingWrite": false,
          },
        },
      ],
      "_type": "hubspot_role",
      "createdOn": undefined,
      "displayName": "ExampleRole",
      "id": "97200",
      "name": "ExampleRole",
      "requiresBillingWrite": false,
    },
    Object {
      "_class": Array [
        "AccessRole",
      ],
      "_key": "hubspot_role:97591 ",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "id": "97591",
            "name": "ExampleRole2",
            "requiresBillingWrite": false,
          },
        },
      ],
      "_type": "hubspot_role",
      "createdOn": undefined,
      "displayName": "ExampleRole2",
      "id": "97591",
      "name": "ExampleRole2",
      "requiresBillingWrite": false,
    },
    Object {
      "_class": Array [
        "User",
      ],
      "_key": "hubspot_user:84106262 ",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": PublicOwner {
            "archived": false,
            "createdAt": 2021-06-14T19:38:46.907Z,
            "email": "stefan@creativice.com",
            "firstName": "Stefan",
            "id": "84106262",
            "lastName": "Virag",
            "teams": undefined,
            "updatedAt": 2021-06-14T19:38:46.907Z,
            "userId": 25150127,
          },
        },
      ],
      "_type": "hubspot_user",
      "active": true,
      "archived": false,
      "createdOn": 1623699526907,
      "displayName": "Stefan Virag",
      "email": "stefan@creativice.com",
      "firstName": "Stefan",
      "id": "84106262",
      "lastName": "Virag",
      "name": "Stefan Virag",
      "updatedOn": 1623699526907,
      "userId": 25150127,
      "username": "stefan@creativice.com",
    },
    Object {
      "_class": Array [
        "User",
      ],
      "_key": "hubspot_user:90089236 ",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": PublicOwner {
            "archived": false,
            "createdAt": 2021-07-13T13:57:46.581Z,
            "email": "viragsf@gmail.com",
            "firstName": "",
            "id": "90089236",
            "lastName": "",
            "teams": undefined,
            "updatedAt": 2021-07-13T13:57:46.581Z,
            "userId": 25516621,
          },
        },
      ],
      "_type": "hubspot_user",
      "active": true,
      "archived": false,
      "createdOn": 1626184666581,
      "displayName": "viragsf@gmail.com",
      "email": "viragsf@gmail.com",
      "firstName": "",
      "id": "90089236",
      "lastName": "",
      "name": "viragsf@gmail.com",
      "updatedOn": 1626184666581,
      "userId": 25516621,
      "username": "viragsf@gmail.com",
    },
  ],
  "collectedRelationships": Array [
    Object {
      "_class": "ASSIGNED",
      "_fromEntityKey": "hubspot_user:90089236 ",
      "_key": "hubspot_user:90089236 |assigned|hubspot_role:97200 ",
      "_toEntityKey": "hubspot_role:97200 ",
      "_type": "hubspot_user_assigned_role",
      "displayName": "ASSIGNED",
    },
  ],
  "encounteredTypes": Array [
    "hubspot_role",
    "hubspot_user",
    "hubspot_user_assigned_role",
  ],
  "numCollectedEntities": 4,
  "numCollectedRelationships": 1,
}
`;

exports[`#fetchOwners should collect data 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Account",
      ],
      "_key": "hubspot_account:123123 ",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "apiBaseUrl": "https://api.hubapi.com",
            "appId": "123123",
          },
        },
      ],
      "_type": "hubspot_account",
      "accessUrl": "https://api.hubapi.com",
      "createdOn": undefined,
      "displayName": "123123",
      "name": "123123",
    },
    Object {
      "_class": Array [
        "User",
      ],
      "_key": "hubspot_user:84106262 ",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": PublicOwner {
            "archived": false,
            "createdAt": 2021-06-14T19:38:46.907Z,
            "email": "stefan@creativice.com",
            "firstName": "Stefan",
            "id": "84106262",
            "lastName": "Virag",
            "teams": undefined,
            "updatedAt": 2021-06-14T19:38:46.907Z,
            "userId": 25150127,
          },
        },
      ],
      "_type": "hubspot_user",
      "active": true,
      "archived": false,
      "createdOn": 1623699526907,
      "displayName": "Stefan Virag",
      "email": "stefan@creativice.com",
      "firstName": "Stefan",
      "id": "84106262",
      "lastName": "Virag",
      "name": "Stefan Virag",
      "updatedOn": 1623699526907,
      "userId": 25150127,
      "username": "stefan@creativice.com",
    },
    Object {
      "_class": Array [
        "User",
      ],
      "_key": "hubspot_user:90089236 ",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": PublicOwner {
            "archived": false,
            "createdAt": 2021-07-13T13:57:46.581Z,
            "email": "viragsf@gmail.com",
            "firstName": "",
            "id": "90089236",
            "lastName": "",
            "teams": undefined,
            "updatedAt": 2021-07-13T13:57:46.581Z,
            "userId": 25516621,
          },
        },
      ],
      "_type": "hubspot_user",
      "active": true,
      "archived": false,
      "createdOn": 1626184666581,
      "displayName": "viragsf@gmail.com",
      "email": "viragsf@gmail.com",
      "firstName": "",
      "id": "90089236",
      "lastName": "",
      "name": "viragsf@gmail.com",
      "updatedOn": 1626184666581,
      "userId": 25516621,
      "username": "viragsf@gmail.com",
    },
  ],
  "collectedRelationships": Array [
    Object {
      "_class": "HAS",
      "_fromEntityKey": "hubspot_account:123123 ",
      "_key": "hubspot_account:123123 |has|hubspot_user:84106262 ",
      "_toEntityKey": "hubspot_user:84106262 ",
      "_type": "hubspot_account_has_user",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "hubspot_account:123123 ",
      "_key": "hubspot_account:123123 |has|hubspot_user:90089236 ",
      "_toEntityKey": "hubspot_user:90089236 ",
      "_type": "hubspot_account_has_user",
      "displayName": "HAS",
    },
  ],
  "encounteredTypes": Array [
    "hubspot_account",
    "hubspot_user",
    "hubspot_account_has_user",
  ],
  "numCollectedEntities": 3,
  "numCollectedRelationships": 2,
}
`;
